Name:                scotty-blaze
Version:             0.1.3
Synopsis:            blaze-html integration for scotty


License:             MIT
License-file:        LICENSE
Author:              William Casarin
Maintainer:          will@casarin.me


Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2


Library
  hs-source-dirs: src
  Exposed-modules: Web.Scotty.Blaze

  Build-depends: base          >= 4
               , blaze-html    >= 0.5
               , blaze-builder >= 0.3
               , scotty        >= 0.4
               , wai           >= 1.2
               , mtl           >= 2
